fix and update notification styling AG-16207
Merge in EXTENSIONS/browser-extension from fix/AG-16207 to master

Squashed commit of the following:

commit e624ab43b7d92704ec149e7502f906b58dfd96a6
Merge: 3199f739f 719af3e26
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Wed Sep 14 17:29:05 2022 +0300

    Merge branch 'master' into fix/AG-16207

commit 3199f739f87627ad455adb2ce3c3e4f26c0c1604
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Wed Sep 14 15:16:13 2022 +0300

    align icons top

commit 944da99605498aafcfa01c86fb44647afcbadcea
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Fri Sep 9 19:51:19 2022 +0300

    typo

commit 80800b1b6efecf333ec1f1d0631d5b6c5621a60f
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Fri Sep 9 19:51:05 2022 +0300

    fix close button for no-title notification

commit b08a3658df9868c37b5def506848882e747f698d
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Fri Sep 9 19:25:08 2022 +0300

    fix close button pos

commit 1ea344e7b5018a68127e94fadd1aa7be32e91029
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Wed Aug 31 14:21:50 2022 +0300

    fix and update notification styling

--- a/Extension/src/pages/options/components/Notifications/notifications.pcss
+++ b/Extension/src/pages/options/components/Notifications/notifications.pcss
@@ -14,9 +14,9 @@
     left: 0;
     width: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
-    padding: 16px 23px;
+    padding: 16px 23px 16px 19px;
     border-radius: 8px;
     background-color: var(--gray900);
     color: var(--white);
@@ -36,6 +36,7 @@
 
     &__close {
         margin-left: auto;
+        transform: translateY(-3px);
     }
 
     &__icon {
@@ -44,22 +45,30 @@
         &--info {
             width: 24px;
             height: 24px;
-            margin-right: 16px;
         }
 
         &--close {
-            width: 12px;
-            height: 12px;
+            width: 24px;
+            height: 24px;
         }
     }
 
+    &__message {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        margin: 0 22px 0 19px;
+        line-height: 16px;
+    }
+
     &__title {
-        font-size: 16px;
+        font-size: 14px;
+        font-weight: 600;
+        margin-bottom: 8px;
     }
 
     &__description {
-        font-size: 14px;
-        padding-right: 15px;
+        font-size: 12px;
     }
 }
 
